tests/spec/fail/map_index_non_string.aja
m = {"a": 1}
print(m[1])
